--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>drag slide</title>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width" />
+  <link href="style.css" rel="stylesheet" type="text/css" />
+  <title>Practice</title>
   <body>
-    <div class="tilte">
-      <h1>DRAG SLIDE</h1>
-    </div>
-    <div class="slider">
-      <div class="slider-inner">
-        <div class="slider-item"></div>
-        <div class="slider-item"></div>
-        <div class="slider-item"></div>
-        <div class="slider-item"></div>
-        <div class="slider-item"></div>
-        <div class="slider-item"></div>
+    <div class="grand">
+      <div class="slider">
+        <div class="slider__01 showing"><img src="img/01.jpg" /></div>
+        <div class="slider__02"><img src="img/02.jpeg" /></div>
+        <div class="slider__03"><img src="img/03.png" /></div>
+        <div class="slider__04"><img src="img/04.png" /></div>
+        <div class="slider__05"><img src="img/05.png" /></div>
+        <div class="slider__bg"></div>
+      </div>
+      <div class="btn__div">
+        <span><button class="pre">👈</button></span>
+        <span><button class="next">👉</button></span>
       </div>
     </div>
-    <script src="app.js"></script>
+    <script src="slider.js"></script>
   </body>
-</html>
+</head>
